# self-chinese-listening-practice

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/listening_backend/: config.py  content_sync.py  db.py  jobs.py  main.py  models.py
backend/listening_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/listening_backend/activity/: db.py  models.py  repo.py  router.py  streak_router.py
backend/listening_backend/api/: content.py  dialogues.py  jobs.py  lessons.py  media.py  vocabulary.py
backend/listening_backend/content/: audio_router.py  db.py  dialogues_router.py  exercises.py  exercises_router.py  grammar_router.py  models.py  progress_router.py  reading_router.py  seed.py  sync.py  sync_router.py  vocabulary_router.py
backend/listening_backend/lessons/: db.py  jobs.py  jobs_router.py  models.py  router.py
backend/listening_backend/lessons/pipeline/: pinyin_convert.py  transcribe.py  youtube.py
backend/listening_backend/pipeline/: sentence_split.py  youtube.py
backend/listening_backend/seed_data/: CONVENTION.md  dialogues.json
backend/listening_backend/seed_data/grammar/: hsk_1.json  (+6 more)
backend/listening_backend/tts/: router.py  synth.py
backend/scripts/: run.ps1  run.sh
backend/tests/: conftest.py  test_activity_repo.py  test_activity_router.py  test_audio_router.py  test_content_seed.py  test_content_sync.py  test_db_schema.py  test_dialogues_router.py  test_exercises_router.py  test_grammar_router.py  test_progress_router.py  test_reading_router.py  test_vocabulary_router.py
(+237 files in other folders)
